<resources>
    <string name="app_name">UCDenver Nav</string>

    <!-- Content Descriptions for Accessibility -->
    <string name="desc_search_icon">Search Icon</string>
    <string name="desc_go_button">Start Navigation</string>
    <string name="desc_stop_button">Stop Navigation</string>
    <string name="desc_building_image">Building Image</string>
    <string name="desc_directions_icon">Turn Direction Icon</string>

    <!-- Accessibility Fragment Strings -->
    <string name="default_access_title">Accessible Entrance</string>
    <string name="default_access_category">Category Name</string>
    <string name="action_close">Close</string>
    <string name="action_go_here">GO HERE</string>
    <string name="desc_sort_icon">Sort by Category</string>

    <string name="hint_where_to">Where to?</string>
    <string name="desc_start_nav_button">Start Navigation</string>
    <string name="placeholder_time_dist">12 min (0.5 mi)</string>

    <!-- Locations Fragment Placeholders -->
    <string name="placeholder_building_name">Building Name</string>
    <string name="placeholder_address">Address</string>
    <string name="placeholder_description">Description goes here</string>


</resources>